TERP proj/force-app/main/default/objects/Lead/fields/Assign__c.field-meta.xml
<CustomField>
    <fullName>Assign__c</fullName>
    <label>Assign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>