TERP proj/force-app/main/default/objects/Lead/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversation</label>
    <referenceTo>Monthly_Stats__c</referenceTo>
    <relationshipLabel>Conversation</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>