TERP proj/force-app/main/default/objects/Lead/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>IT Help Desk</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Website Development</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>vTiger CRM</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
                <isActive>false</isActive>
                <label>Channel Partners</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>